--- a/index.html
+++ b/index.html
@@ -1,61 +1,39 @@
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PRIME GROUP - Gestão Operacional</title>
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="theme-color" content="#020617">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #020617;
-            color: #f8fafc;
-            margin: 0;
-            padding: 0;
-        }
-        ::-webkit-scrollbar { width: 0px; background: transparent; }
-        
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .animate-fadeIn { animation: fadeIn 0.3s ease-out; }
-        
-        @keyframes slideDown { from { transform: translateY(-10px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-        .animate-slideDown { animation: slideDown 0.3s ease-out; }
+import { User, UserRole, Vehicle, VehicleStatus, Customer } from './types';
 
-        @media print {
-          .no-print { display: none !important; }
-          body { background: white; color: black; }
-          .card-report { border: 1px solid #ddd !important; background: white !important; color: black !important; }
-        }
+export const INITIAL_USERS: User[] = [
+  { id: '00000000-0000-0000-0000-000000000001', nome: 'Guilherme', email: 'guilherme@prime.com', senha: 'prime123', perfil: UserRole.ADMIN, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000002', nome: 'Danilo', email: 'danilo@prime.com', senha: 'prime123', perfil: UserRole.ADMIN, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000003', nome: 'João Pinheiro', email: 'joao@prime.com', senha: '123', perfil: UserRole.MOTORISTA, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000004', nome: 'José Clemente', email: 'jose@prime.com', senha: '123', perfil: UserRole.MOTORISTA, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000005', nome: 'Carlos Eduardo', email: 'carlos@prime.com', senha: '123', perfil: UserRole.MOTORISTA, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000006', nome: 'Sérgio Medeiros', email: 'sergio@prime.com', senha: '123', perfil: UserRole.MOTORISTA, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000007', nome: 'André Luiz', email: 'andre@prime.com', senha: '123', perfil: UserRole.MOTORISTA, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000008', nome: 'Renan', email: 'renan@prime.com', senha: '123', perfil: UserRole.AJUDANTE, ativo: true },
+  { id: '00000000-0000-0000-0000-000000000009', nome: 'Junior', email: 'junior@prime.com', senha: '123', perfil: UserRole.AJUDANTE, ativo: true },
+];
 
-        .pulse-emerald {
-          animation: pulse-emerald 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-        }
-        @keyframes pulse-emerald {
-          0%, 100% { opacity: 1; }
-          50% { opacity: .5; }
-        }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.469.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0"
-  }
-}
-</script>
-</head>
-<body class="antialiased">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-</body>
-</html>
+export const INITIAL_VEHICLES: Vehicle[] = [
+  { id: '11111111-1111-1111-1111-111111111111', placa: 'LQB2B76', modelo: 'Mercedes-Benz Atego', kmAtual: 154200, status: VehicleStatus.RODANDO, proximaManutencaoKm: 160000 },
+  { id: '11111111-1111-1111-1111-111111111112', placa: 'LUX9A15', modelo: 'Volvo FH 540', kmAtual: 89000, status: VehicleStatus.RODANDO, proximaManutencaoKm: 95000 },
+  { id: '11111111-1111-1111-1111-111111111113', placa: 'INZ6I09', modelo: 'Scania R450', kmAtual: 210000, status: VehicleStatus.MANUTENCAO, proximaManutencaoKm: 210500 },
+  { id: '11111111-1111-1111-1111-111111111114', placa: 'KVN8790', modelo: 'Volkswagen Constellation', kmAtual: 125600, status: VehicleStatus.RODANDO, proximaManutencaoKm: 130000 },
+  { id: '11111111-1111-1111-1111-111111111115', placa: 'DLA3I85', modelo: 'Iveco Stralis', kmAtual: 340000, status: VehicleStatus.PARADO, proximaManutencaoKm: 345000 },
+  { id: '11111111-1111-1111-1111-111111111116', placa: 'LNN4760', modelo: 'Ford Cargo', kmAtual: 45000, status: VehicleStatus.RODANDO, proximaManutencaoKm: 50000 },
+  { id: '11111111-1111-1111-1111-111111111117', placa: 'LNX4C34', modelo: 'Mercedes-Benz Axor', kmAtual: 178000, status: VehicleStatus.RODANDO, proximaManutencaoKm: 185000 },
+];
+
+export const INITIAL_CUSTOMERS: Customer[] = [
+  { id: '22222222-2222-2222-2222-222222222221', nome: 'Frigocopa', ativo: true },
+  { id: '22222222-2222-2222-2222-222222222222', nome: 'King Ouro', ativo: true },
+  { id: '22222222-2222-2222-2222-222222222223', nome: 'Ortobom', ativo: true },
+];
+
+export const APP_THEME = {
+  primary: 'bg-blue-900',
+  secondary: 'bg-slate-900',
+  accent: 'text-blue-400',
+  background: 'bg-slate-950',
+  card: 'bg-slate-900/50',
+  border: 'border-slate-800'
+};
